--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,6 +19,8 @@ target 'J2E' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-async-storage/async-storage'
+
   target 'J2ETests' do
     inherit! :complete
     # Pods for testing
