--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-native-firebase/app": "^15.3.0",
     "@react-native-firebase/database": "^15.3.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
@@ -29,9 +30,11 @@
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
+    "react-native-sensitive-info": "^5.5.8",
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.2",
+    "sync-storage": "^0.4.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
